# openeo-test-suite

./: .gitmodules  pyproject.toml  run_tests_and_count.py
.github/workflows/: internal-tests.yaml  pytest-collect.yaml  test-dedl-backend.yml
src/openeo_test_suite/tests/general/: test_compliance.py
src/openeo_test_suite/tests/general/payload_examples/put_process_graphs/: put_process_graphs_1.json
