[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openeo_test_suite"
dynamic = ["version"]
description = "Test suite for validation of openEO back-ends against the openEO API specification."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.4",
    "openeo>=0.24.0",
    "json-five>=1.1.1",
    "xarray>=2023.11.0",
    "numpy>=1.26.2",
    "deepdiff>=6.7.1",
    "python-dateutil>=2.8.2",
    "pystac>=1.9.0",
    "pystac-client>=0.7.5",
    "netCDF4>=1.6.0",
    "rioxarray>=0.14.0",
    "pytest-html>=4.1.0",
    "stac-validator>=3.3.0",
    "pytest-metadata>=3.0.0",
    "openapi-core==0.18.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "openeo_test_suite.__version__"}

[project.optional-dependencies]
dask = [
    "openeo-pg-parser-networkx>=2023.11.0",
    "openeo-processes-dask[implementations]>=2023.11.6,!=2024.1.1,!=2024.1.2",
    "joblib>=1.3.2", # extra dependency that is not properly declared in openeo-processes-dask https://github.com/Open-EO/openeo-processes-dask/issues/216
]
vito = [
    "openeo_driver>=0.81.0.dev",
]

[tool.pytest.ini_options]
testpaths = [
    "src/openeo_test_suite/tests",
]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore:(pkg_resources|jsonschema.RefResolver):DeprecationWarning",
]
markers = [
    "optional: marks optional tests (deselect with '-m \"not optional\"')",
    "longrunning: marks long running tests (deselect with '-m \"not longrunning\"')",
]
